# whos-human-vr

./: .gitattributes  .gitignore  README.md  WhoisHuman.txt  WhoisHumanVoiceSolution.txt  make-release-zip.sh  play-file-mode.bat  play-file-mode.command  play-file-mode.ps1  play-file-mode.sh  stop-file-mode.command
UnityVr/WhosHuman/: BUILD_AND_DISTRIBUTE.md
booth-package/: README.txt  setup-kokoro.bat  setup-kokoro.command  start.bat  start.command
game/WhosHuman_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.resource
kokoro-local-tts/: .gitignore  README.md  SETUP_NOTES.md  pyproject.toml  run.bat  run.ps1
kokoro-local-tts/app/: __init__.py  audio_cache.py  config.py  main.py  schemas.py  tts_service.py
kokoro-local-tts/generated_audio/: .gitkeep
kokoro-local-tts/scripts/: generate_sample.py  list_voices.py
kokoro-local-tts/static/: app.js  index.html  styles.css
kokoro-local-tts/tests/: test_health.py  test_tts_smoke.py  test_validation.py
who-is-human/: .env.example  .gitattributes  .gitignore  README.md  package-lock.json  package.json  start-server.bat  tsconfig.json
who-is-human/docs/: architecture.md  deploy-linux-claude-agents.md  human-among-agents-rules.md  setup-claude-code-agents.md
who-is-human/public/: app.js  i18n.js  index.html  messages.json  style.css  tts.js
who-is-human/src/: sim.ts
who-is-human/tests/: audit.test.ts  dualIdentity.test.ts  outcomes.test.ts
who-is-human/tools/: agent-runner.ps1  (+3 more)
(+74 files in other folders)
